# OpenCLPlayGround

./: CMakeLists.txt  LICENSE  README.md  tester.cpp
kernels/: square.cl
openCL/: CMakeLists.txt  OpenCLBuilder.h
